css fix on circle animation mobile

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -185,6 +185,10 @@ body {
         justify-content: center;
     }
 
+    #two-circles {
+        height: 100%;
+    }
+
     .main-right {
         height: 50%;
         width: 100%;
